--- a/src/assets/scss/object/component/_clipPath.scss
+++ b/src/assets/scss/object/component/_clipPath.scss
@@ -1,27 +1,27 @@
-.c-clipbg__CS {
-	background: linear-gradient(
-		90deg,
-		rgba(37, 121, 191, 1) 0%,
-		rgba(37, 147, 213, 1) 50%
-	);
-	-webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-	clip-path: polygon(100% 0, 0% 100%, 100% 100%);
-	height: 90px;
-}
+// .c-clipbg__CS {
+// 	background: linear-gradient(
+// 		90deg,
+// 		rgba(37, 121, 191, 1) 0%,
+// 		rgba(37, 147, 213, 1) 50%
+// 	);
+// 	-webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+// 	clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+// 	height: 90px;
+// }
 
-.c-clipbg__CS2 {
-	background: linear-gradient(
-		90deg,
-		rgba(37, 121, 191, 1) 0%,
-		rgba(37, 147, 213, 1) 50%
-	);
-	-webkit-clip-path: polygon(100% 0, 0 0, 0 100%);
-	clip-path: polygon(100% 0, 0 0, 0 100%);
-	height: 90px;
-	&::before {
-		background-color: #fff;
-	}
-}
+// .c-clipbg__CS2 {
+// 	background: linear-gradient(
+// 		90deg,
+// 		rgba(37, 121, 191, 1) 0%,
+// 		rgba(37, 147, 213, 1) 50%
+// 	);
+// 	-webkit-clip-path: polygon(100% 0, 0 0, 0 100%);
+// 	clip-path: polygon(100% 0, 0 0, 0 100%);
+// 	height: 90px;
+// 	&::before {
+// 		background-color: #fff;
+// 	}
+// }
 
 .white_bg {
 	background: #fff !important;
