--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -15,7 +15,7 @@
 		-webkit-clip-path: polygon(100% 0%, 0 0, 0% 100%);
 		clip-path: polygon(100% 0%, 0 0, 0% 100%);
 		padding: 100px 0 0 0;
-		background-color: #fff;
+		background: rgb(95, 165, 205);
 		text-align: center;
 		margin-bottom: 90px;
 	}
@@ -90,7 +90,7 @@
 	}
 
 	.section_3 {
-		padding-top: 100px;
+		padding:100px 0 100px 0;
 
 		.l-wrap {
 			position: relative;
@@ -109,4 +109,35 @@
 			}
 		}
 	}
+
+	.bread_crumps{
+		background: rgb(95, 165, 205);
+		margin-top: -1px;
+		.txt{
+			width: 92%;
+			margin: 0 auto;
+			max-width: 1100px;
+			color: #fff;
+			font-family: yu-mincho-pr6n, sans-serif;
+		}
+	}
+
+	// clip top
+	.top-clip {
+		width: 800px;
+		height: 250px;
+		clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+		background: linear-gradient(to left, #2593d5, #2579bf);
+		position: absolute;
+		top: -4.5%;
+		right: 0%;
+
+		@include is-sp {
+			width: 83%;
+			height: 161px;
+			top: -30px;
+		}
+	}
+
+	
 }
